# myNN

./: .gitignore  CMakeLists.txt  LICENSE  MNIST_test.cpp  README.md
NN/: CMakeLists.txt  NN.cpp  NN.h  layer.cpp  layer.h  neuron.h
